@@ -1,3 +1,8 @@
+2005-08-30  Tommi Komulainen  <tommi.komulainen@nokia.com>
+	
+	* hildon-widgets/hildon-time-editor.c (convert_to_12h): Removed a hack
+	that was not working.  N#16805
+
 2005-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* configure.ac: Release 0.9.48
